# project-721

./: CMakeLists.txt  README.md  addnewdevicedialog.cpp  addnewdevicedialog.h  addnewdevicedialog.ui  addnewgroupdialog.cpp  addnewgroupdialog.h  addnewgroupdialog.ui  asicdevice.cpp  asicdevice.h  asictablewidget.cpp  asictablewidget.h  basicsettingswindow.cpp  basicsettingswindow.h  basicsettingswindow.ui  configurationholder.cpp  configurationholder.h  devicesettingswindow.cpp  devicesettingswindow.h  devicesettingswindow.ui  groupsettingsdialog.cpp  groupsettingsdialog.h  groupsettingsdialog.ui  logger.cpp  logger.hpp  main.cpp  main.hpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  networksettingswindow.cpp  networksettingswindow.h  networksettingswindow.ui  project-721.qrc  scannerwindow.cpp  scannerwindow.h  scannerwindow.ui  sleepsettingswindow.cpp  sleepsettingswindow.h  (+1 more)
